--- a/.github/workflows/lightouse.yml
+++ b/.github/workflows/lightouse.yml
@@ -16,4 +16,4 @@ jobs:
       - name: run Lighthouse CI
         run: |
           npm install -g @lhci/cli@0.3.x
-          lhci autorun --upload.target=temporary-public-storage || echo "LHCI failed!"
+          lhci autorun --collect.url=https://node.js.org/ --upload.target=temporary-public-storage || echo "LHCI failed!"
